finalização dos testes

--- a/AlunoOnlineTest/WebContent/eadacadastro.html
+++ b/AlunoOnlineTest/WebContent/eadacadastro.html
@@ -155,7 +155,7 @@
 					    <tbody>
 					      <tr>
 					        <td width="108" height="23"><span style="font-family: Arial, Helvetica, sans-serif">ANEXAR</span></td>
-					        <td width="705"><input type="file" id="procurar" name="Formulario:arquivo" size="60" onchange="javascript:validaTamanhoDoArquivo(this)" /></td>
+					        <td width="705"><input type="file" id="procurar" name="Formulario:arquivo" size="60" onchange="javascript:validaTamanhoDoArquivo(this)" value="anexar" /></td>
 				          </tr>
 				        </tbody>
 			      </table>
